--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -5,16 +5,14 @@ deploy:
     manifests:
       - ./infra/k8s/*
 build:
-  # local:
-  #   push: false
-  googleCloudBuild:
-    projectId: ticketing-dev-389209
+  local:
+    push: false
   artifacts:
-    - image: us.gcr.io/ticketing-dev-389209/auth
+    - image: sunilpal/auth
       context: auth
       docker:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts'
+          - src: "src/**/*.ts"
             dest: .
