--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,7 +8,7 @@ build:
   local:
     push: false
   artifacts:
-    - image: sunilpal/auth
+    - image: rallycoding/auth
       context: auth
       docker:
         dockerfile: Dockerfile
