--- a/auth/package.json
+++ b/auth/package.json
@@ -1,14 +1,4 @@
 {
-  "name": "auth",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
@@ -21,5 +11,13 @@
     "mongoose": "^7.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "mongodb-memory-server": "^8.13.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0"
   }
 }
